--- a/styles/style.css
+++ b/styles/style.css
@@ -13,13 +13,62 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
   /* выше установили ограничения для секции */
 }
 
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+  width: 182px;
+  height: 32px;
+  z-index: 2;
+}
+
+.title {
+  width: 730px;
+  margin: auto 64px;
+  font-size: 102px;
+  text-weight: bold;
+  line-height: 96px;
+  z-index: 2;
+}
+
+.subtitle {
+  position: absolute;
+  width: 388px;
+  bottom: 30px;
+  left: 64px;
+  font-size: 18px;
+  line-height: 25px;
+  text-weight: normal;
+  z-index: 2;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.main-illustration{
+  position: absolute;
+  width: 765px;
+  height: 568px;
+  bottom: 0;
+  right:0;
+  z-index: 1;
+
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
