--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,9 @@
   max-height: 756px;
   background-color: #f2f2f2;
   display: flex;
+  margin: 0;
+  padding: 0;
+  position: relative;
   /* выше установили ограничения для секции */
 }
 
@@ -27,7 +30,7 @@
   z-index: 2;
 }
 
-.title {
+.header__title {
   width: 730px;
   margin: auto 64px;
   font-size: 102px;
@@ -36,7 +39,7 @@
   z-index: 2;
 }
 
-.subtitle {
+.header__subtitle {
   position: absolute;
   width: 388px;
   bottom: 30px;
@@ -47,20 +50,26 @@
   z-index: 2;
 }
 
-.link {
+.header__link{
   text-decoration: none;
+  color:  #2f80ed;
 }
 
-.main-illustration{
+.feynman__link {
+  text-decoration: none;
+  color:  #2f80ed;
+}
+
+.header__main-illustration {
   position: absolute;
   width: 765px;
   height: 568px;
   bottom: 0;
-  right:0;
+  right: 0;
   z-index: 1;
 
 }
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -71,10 +80,247 @@
   z-index: 0;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.two-columns {
+  display: flex;
+  margin: 100px auto;
+  width: 80%;
+  justify-content: space-between;
+}
+
+.brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  margin: 0;
+}
+
+.main-text {
+  width: 80%;
+  min-width: 784px;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
+  padding: 0;
+  margin: 0;
+}
+
+.paragraph {
+  margin: 0;
+}
+
+.paragraph:nth-of-type(2n){
+  margin-top:30px;
+  margin-bottom: 30px;
+}
+
+.span-accent {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 34px;
+
+}
+
+.digits {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.section-title {
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 1.15;
+  width: 60%;
+  text-align: center;
+  margin: 0 auto 0;
+}
+
+.section-subtitle {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 34px;
+  width: 60%;
+  text-align: center;
+  margin: 20px auto 0;
+}
+
+.table {
+  width: 1100px;
+  margin: 0 auto 100px;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  flex-wrap: wrap;
+}
+
+.table__sell {
+  width: 250px;
+  margin-right: 0;
+  margin-top: 60px;
+
+}
+
+.table__heading {
+  margin: 0 auto 0;
+}
+
+.table__text {
+  padding-top: 20px;
+  margin: 0;
+}
+
+.feynman {
+  background-color: #f2f2f2;
+  margin: 0;
+  padding-top: 100px;
+  background-image: url(../images/feynman.png);
+  background-position: left bottom;
+  background-repeat: no-repeat;
+  height: 100vh;
+  position: relative;
+}
+
+.feynman__title {
+  margin: 0 auto 0;
+  width: 648px;
+  font-size: 120px;
+  line-height: 115px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  margin: 70px auto 0;
+  text-align: center;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  font-size: 36px;
+  line-height: 51px;
+  font-weight: normal;
+  text-decoration: none;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  padding-top: 90px;
+  position: relative;
+}
+
+.table_theme_dark {
+  margin: 0 auto 0;
+  padding-bottom: 90px;
+}
+
+.section-title_theme_dark {
+  color: white;
+  z-index: 2;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+  z-index: 2;
+}
+
 .table__cell_theme_dark {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
+  z-index: 2;
 }
+
+.kaufman__triangle{
+  position: absolute;
+  overflow: hidden;
+  right: -210px;
+  top:0;
+  z-index: 1;
+  width: 877px;
+  height: 877px;
+}
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  display: flex;
+  flex-basis: 711px;
+}
+
+.columns {
+  width: 90%;
+  margin: 0 auto 0;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+
+}
+
+.content_copyright {
+  display: flex;
+  height: 100%;
+  width: 50%;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+}
+
+.author {
+  color: #f2f2f2;
+  margin-top: 18px;
+  margin-bottom: 18px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.content_info {
+  display: flex;
+  flex-direction: column;
+}
+
+.content_social {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+  margin: 0 10px 0 0;
+  padding: 0;
+}
+
+.footer__column-heading{
+  text-align: center;
+  margin: 0 0 20px;
+}
+.footer__column-links{
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+.footer__column-link{
+  text-decoration: none;
+  color: #f2f2f2;
+  margin: 0;
+  padding: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+
+
+
+
