--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
   position: absolute;
   top: 30px;
   left: 64px;
-  width: 182px;
+  width: 183px;
   height: 32px;
   z-index: 2;
 }
@@ -50,20 +50,15 @@
   z-index: 2;
 }
 
-.header__link{
+.header__link {
   text-decoration: none;
-  color:  #2f80ed;
-}
-
-.feynman__link {
-  text-decoration: none;
-  color:  #2f80ed;
+  color: #2f80ed;
 }
 
 .header__main-illustration {
   position: absolute;
   width: 765px;
-  height: 568px;
+  height: 608px;
   bottom: 0;
   right: 0;
   z-index: 1;
@@ -80,14 +75,18 @@
   z-index: 0;
 }
 
+.description {
+  padding-top: 100px;
+}
+
 .two-columns {
   display: flex;
-  margin: 100px auto;
+  margin: 0 auto 0;
   width: 80%;
   justify-content: space-between;
 }
 
-.brief {
+.two-columns__brief {
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -96,7 +95,7 @@
   margin: 0;
 }
 
-.main-text {
+.two-columns__main-text {
   width: 80%;
   min-width: 784px;
   font-weight: normal;
@@ -106,16 +105,16 @@
   margin: 0;
 }
 
-.paragraph {
+.two-columns__paragraph {
   margin: 0;
 }
 
-.paragraph:nth-of-type(2n){
-  margin-top:30px;
+.two-columns__paragraph:nth-of-type(2n) {
+  margin-top: 30px;
   margin-bottom: 30px;
 }
 
-.span-accent {
+.two-columns__span-accent {
   font-weight: bold;
   font-size: 24px;
   line-height: 34px;
@@ -177,7 +176,7 @@
   background-image: url(../images/feynman.png);
   background-position: left bottom;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 890px;
   position: relative;
 }
 
@@ -193,6 +192,9 @@
 .feynman__subtitle {
   margin: 70px auto 0;
   text-align: center;
+  line-height: 51px;
+  font-weight: normal;
+  font-size: 36px;
 }
 
 .feynman__link {
@@ -203,12 +205,14 @@
   line-height: 51px;
   font-weight: normal;
   text-decoration: none;
+  color: #2f80ed;
 }
 
 .kaufman {
   background-color: #1f1f1f;
   padding-top: 90px;
   position: relative;
+  overflow: hidden;
 }
 
 .table_theme_dark {
@@ -234,15 +238,15 @@
   z-index: 2;
 }
 
-.kaufman__triangle{
+.kaufman__triangle {
   position: absolute;
-  overflow: hidden;
   right: -210px;
-  top:0;
+  top: 0;
   z-index: 1;
   width: 877px;
   height: 877px;
 }
+
 .footer {
   min-height: 350px;
   background-color: #1f1f1f;
@@ -252,7 +256,7 @@
   flex-basis: 711px;
 }
 
-.columns {
+.footer__columns {
   width: 90%;
   margin: 0 auto 0;
   display: flex;
@@ -261,7 +265,7 @@
 
 }
 
-.content_copyright {
+.footer__column_content_copyright {
   display: flex;
   height: 100%;
   width: 50%;
@@ -274,7 +278,7 @@
   height: 35px;
 }
 
-.author {
+.footer__author {
   color: #f2f2f2;
   margin-top: 18px;
   margin-bottom: 18px;
@@ -283,12 +287,12 @@
   font-weight: normal;
 }
 
-.content_info {
+.footer__columns_content_info {
   display: flex;
   flex-direction: column;
 }
 
-.content_social {
+.footer__columns_content_social {
   display: flex;
   flex-direction: column;
 }
@@ -300,17 +304,19 @@
   padding: 0;
 }
 
-.footer__column-heading{
+.footer__column-heading {
   text-align: center;
   margin: 0 0 20px;
 }
-.footer__column-links{
+
+.footer__column-links {
   padding: 0;
   display: flex;
   flex-direction: column;
   margin: 0;
 }
-.footer__column-link{
+
+.footer__column-link {
   text-decoration: none;
   color: #f2f2f2;
   margin: 0;
