--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@
 }
 
 .header__title {
-  text-weight: bold;
+  font-weight: bold;
   width: 730px;
   margin: auto 64px;
   font-size: 102px;
@@ -47,6 +47,7 @@
   font-size: 18px;
   line-height: 25px;
   z-index: 2;
+  font-weight: normal;
 }
 
 .header__link {
