--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,7 @@
   margin: 0;
   padding: 0;
   position: relative;
+  z-index: 1;
   /* выше установили ограничения для секции */
 }
 
@@ -27,16 +28,14 @@
   left: 64px;
   width: 183px;
   height: 32px;
-  z-index: 2;
 }
 
 .header__title {
   font-weight: bold;
   width: 730px;
-  margin: auto 64px;
+  margin: auto 0 auto 64px;
   font-size: 102px;
   line-height: 96px;
-  z-index: 2;
 }
 
 .header__subtitle {
@@ -46,8 +45,9 @@
   left: 64px;
   font-size: 18px;
   line-height: 25px;
-  z-index: 2;
   font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header__link {
@@ -61,7 +61,7 @@
   height: 608px;
   bottom: 0;
   right: 0;
-  z-index: 1;
+  z-index: 0;
 
 }
 
@@ -72,7 +72,7 @@
   position: absolute;
   top: 64px;
   right: 0;
-  z-index: 0;
+  z-index: -1;
 }
 
 .description {
@@ -151,9 +151,10 @@
   justify-content: space-between;
   list-style-type: none;
   flex-wrap: wrap;
+  padding-left: 0;
 }
 
-.table__sell {
+.table__сell {
   width: 250px;
   margin-right: 0;
   margin-top: 60px;
@@ -162,11 +163,17 @@
 
 .table__heading {
   margin: 0 auto 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .table__text {
   padding-top: 20px;
   margin: 0;
+  line-height: 1.2;
+  font-weight: normal;
+  font-size: 18px;
 }
 
 .feynman {
@@ -176,7 +183,7 @@
   background-image: url(../images/feynman.png);
   background-position: left bottom;
   background-repeat: no-repeat;
-  height: 890px;
+  min-height: 890px;
   position: relative;
 }
 
@@ -213,6 +220,7 @@
   padding-top: 90px;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .table_theme_dark {
@@ -222,12 +230,10 @@
 
 .section-title_theme_dark {
   color: white;
-  z-index: 2;
 }
 
 .section-subtitle_theme_dark {
   color: white;
-  z-index: 2;
 }
 
 .table__cell_theme_dark {
@@ -235,16 +241,16 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
-  z-index: 2;
 }
 
 .kaufman__triangle {
   position: absolute;
   right: -210px;
   top: 0;
-  z-index: 1;
   width: 877px;
   height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  z-index: -1;
 }
 
 .footer {
@@ -253,7 +259,7 @@
   padding-top: 60px;
   padding-bottom: 40px;
   display: flex;
-  flex-basis: 711px;
+  box-sizing: border-box;
 }
 
 .footer__columns {
@@ -268,7 +274,7 @@
 .footer__column_content_copyright {
   display: flex;
   height: 100%;
-  width: 50%;
+  flex-basis: 711px;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -314,6 +320,7 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+  list-style-type: none;
 }
 
 .footer__column-link {
