--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -7,4 +7,8 @@
   background-size: 877px 877px;
   background-image: url(../../../images/kaufman-triangle.svg);
   z-index: -1;
+  animation-name: rotation;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
