--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,8 @@
 @import url('../blocks/header/__main-illustration/header__main-illustration.css');
 @import url('../blocks/header/__square-pic/header__square-pic.css');
 
+@import url('../blocks/rotation/rotation.css');
+
 @import url('../blocks/description/description.css');
 
 @import url('../blocks/two-columns/two-columns.css');
@@ -26,10 +28,27 @@
 @import url('../blocks/table/__heading/table__heading.css');
 @import url('../blocks/table/__text/table__text.css');
 
+@import url('../blocks/video/video.css');
+@import url('../blocks/video/__iframes/video__iframes.css');
+@import url('../blocks/video/__iframe/video__iframe.css');
+
+@import url('../blocks/oakley/oakley.css');
+
 @import url('../blocks/feynman/feynman.css');
 @import url('../blocks/feynman/__title/feynman__title.css');
 @import url('../blocks/feynman/__subtitle/feynman__subtitle.css');
 @import url('../blocks/feynman/__link/feynman__link.css');
+
+@import url('../blocks/khan/khan.css');
+@import url('../blocks/khan/__container/khan__container.css');
+@import url('../blocks/khan/__book-container/khan__book-container.css');
+@import url('../blocks/khan/__author/khan__author.css');
+@import url('../blocks/khan/__title/khan__title.css');
+@import url('../blocks/khan/__book-link/khan__book-link.css');
+@import url('../blocks/khan/__book-pic/khan__book-pic.css');
+@import url('../blocks/khan/__quote/khan__quote.css');
+@import url('../blocks/khan/__quote-author/khan__quote-author.css');
+@import url('../blocks/khan/__quote-author-subline/khan__quote-author-subline.css');
 
 @import url('../blocks/kaufman/kaufman.css');
 @import url('../blocks/kaufman/__triangle/kaufman__triangle.css');
@@ -41,6 +60,10 @@
 @import url('../blocks/table/__cell/_theme/table__cell_theme_dark.css');
 @import url('../blocks/table/__heading/_theme/table__heading_theme_dark.css');
 @import url('../blocks/table/__text/_theme/table__text_theme_dark.css');
+
+@import url('../blocks/resources/resources.css');
+@import url('../blocks/resources/__logo/recources__logo.css');
+@import url('../blocks/resources/__logo-zone/recources__logo-zone.css');
 
 @import url('../blocks/logo/logo.css');
 @import url('../blocks/logo/_place/logo_place_header.css');
