--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -1,6 +1,7 @@
-.khan__quote-author{
-  margin: 0;
+.cards__title {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  margin-top: 43px;
+  margin-bottom: 16px;
 }
