--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,9 +1,8 @@
-.table {
-  width: 1100px;
+.cards {
+  width: 920px;
   margin: 0 auto 0;
   display: flex;
-  justify-content: space-between;
   list-style-type: none;
   flex-wrap: wrap;
-  padding-left: 0;
+  padding: 0;
 }
