--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url('../vendor/normalize.css');
 @import url('../blocks/page/page.css');
+@import url('../blocks/content/content.css');
 
 @import url('../blocks/header/header.css');
 @import url('../blocks/header/__title/header__title.css');
@@ -27,6 +28,14 @@
 @import url('../blocks/table/__cell/table__cell.css');
 @import url('../blocks/table/__heading/table__heading.css');
 @import url('../blocks/table/__text/table__text.css');
+
+@import url('../blocks/techniques/techniques.css');
+
+@import url('../blocks/cards/cards.css');
+@import url('../blocks/cards/__title/cards__title.css');
+@import url('../blocks/cards/__descriprion/cards__description.css');
+@import url('../blocks/cards/__image/cards__image.css');
+@import url('../blocks/cards/__item/cards__item.css');
 
 @import url('../blocks/video/video.css');
 @import url('../blocks/video/__iframes/video__iframes.css');
